Updated links and header

--- a/html-bio-with-css.html
+++ b/html-bio-with-css.html
@@ -3,9 +3,9 @@
 
 <head>
   <meta charset="UTF-8">
-  <title>CSS Stylesheets with Relative Paths</title>
+  <title>Student Bio Activity</title>
 
-  <link rel="stylesheet" type="text/css" href="css/style.css">
+  <link rel="stylesheet" type="text/css" href="style.css">
 
 </head>
 
@@ -18,7 +18,7 @@
 
     <section id="main-bio">
 
-      <h2>Your Name</h2>
+      <h2>Melissa Aykens</h2>
 
       <img id="bio-image" src="https://placehold.it/200x200" alt="Your Name">
 
